--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -199,9 +199,13 @@
     "query_date = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
     "print(\"Query Date: \", query_date)\n",
     "\n",
+    "#Perform a query to retrieve the data and precipitation scores\n",
+    "#precipitation_query = []\n",
+    "#precipitation_query = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= query_date).all()\n",
+    "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "precipitation_query = []\n",
-    "precipitation_query = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= query_date).all()\n",
+    "precipitation_query = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= '2016-08-23').all()\n",
     "#print(precipitation_query)\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
@@ -221,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1dfa1f425b0>"
+       "<matplotlib.legend.Legend at 0x1e0036f0f40>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +352,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
