--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,19 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save references to each table\n",
-    "Measurement = Base.classes.measurement\n",
+    "measurement = Base.classes.measurement\n",
     "\n",
-    "Station = Base.classes.station"
+    "station = Base.classes.station"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "('2017-08-23',)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,12 +135,12 @@
    "source": [
     "# Find the most recent date in the data set.\n",
     "#Query the 'Measurement' table with the column 'date'\n",
-    "session.query(Measurement.date).order_by(Measurement.date.desc()).first()"
+    "session.query(measurement.date).order_by(measurement.date.desc()).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "precipitation_query = []\n",
-    "precipitation_query = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= '2016-08-23').all()\n",
+    "precipitation_query = session.query(measurement.date, measurement.prcp).filter(measurement.date >= '2016-08-23').all()\n",
     "#print(precipitation_query)\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -384,13 +384,13 @@
    ],
    "source": [
     "# Design a query to calculate the total number stations in the dataset\n",
-    "station_count = session.query(Station).distinct().count()\n",
+    "station_count = session.query(station).distinct().count()\n",
     "print(station_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,13 +415,13 @@
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
     "# List the stations and the counts in descending order.\n",
-    "session.query(Measurement.station, func.count(Measurement.station)).\\\n",
-    "group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()\n"
+    "session.query(measurement.station, func.count(measurement.station)).\\\n",
+    "group_by(measurement.station).order_by(func.count(measurement.station).desc()).all()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -430,20 +430,20 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
-    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
-    "filter(Measurement.station == 'USC00519281').all()"
+    "session.query(func.min(measurement.tobs), func.max(measurement.tobs), func.avg(measurement.tobs)).\\\n",
+    "filter(measurement.station == 'USC00519281').all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -470,9 +470,9 @@
    "source": [
     "# Using the most active station id\n",
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
-    "temperature_results = session.query(Measurement.tobs).\\\n",
-    "filter(Measurement.station == 'USC00519281').\\\n",
-    "filter(Measurement.date >= query_date).all()\n",
+    "temperature_results = session.query(measurement.tobs).\\\n",
+    "filter(measurement.station == 'USC00519281').\\\n",
+    "filter(measurement.date >= query_date).all()\n",
     "#Save results to a dataframe that will be used to make the histogram\n",
     "temperature_df = pd.DataFrame(temperature_results, columns=['tobs'])\n",
     "print(temperature_df)"
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "Text(0.5, 0, 'Temperature')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
