not using date variable as instructed

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
     "temperature_results = session.query(measurement.tobs).\\\n",
     "filter(measurement.station == 'USC00519281').\\\n",
-    "filter(measurement.date >= query_date).all()\n",
+    "filter(measurement.date.between('2016-08-23', '2017-0823')).all()\n",
     "#Save results to a dataframe that will be used to make the histogram\n",
     "temperature_df = pd.DataFrame(temperature_results, columns=['tobs'])\n",
     "print(temperature_df)"
