adjusted dependency import locations

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -118,7 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
+    "import matplotlib.dates as mdates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +137,7 @@
        "('2017-08-23',)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,16 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime as dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -225,25 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.dates as mdates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x282ff7d6520>"
+       "<matplotlib.legend.Legend at 0x28285445b20>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -276,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +344,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +481,7 @@
        "Text(0.5, 0, 'Temperature')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
