--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, inspect, func"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "inspector.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id INTEGER\n",
+      "station TEXT\n",
+      "date TEXT\n",
+      "prcp FLOAT\n",
+      "tobs FLOAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a list of column names and types\n",
+    "columns = inspector.get_columns('measurement')\n",
+    "for c in columns:\n",
+    "    print(c['name'], c[\"type\"])\n",
+    "# columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +183,7 @@
        "('2017-08-23',)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,12 +191,23 @@
    "source": [
     "# Find the most recent date in the data set.\n",
     "#Query the 'Measurement' table with the column 'date'\n",
-    "session.query(measurement.date).order_by(measurement.date.desc()).first()"
+    "last_date_row = session.query(measurement.date).order_by(measurement.date.desc()).first()\n",
+    "last_date_row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a variable for the most recent date\n",
+    "last_date= dt.date.fromisoformat(last_date_row[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -197,16 +254,16 @@
     "\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "query_date = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "query_date = last_date - dt.timedelta(days=365)\n",
     "print(\"Query Date: \", query_date)\n",
     "\n",
     "#Perform a query to retrieve the data and precipitation scores\n",
-    "#precipitation_query = []\n",
-    "#precipitation_query = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= query_date).all()\n",
+    "precipitation_query = []\n",
+    "precipitation_query = session.query(measurement.date, measurement.prcp).filter(measurement.date >= query_date).all()\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "precipitation_query = []\n",
-    "precipitation_query = session.query(measurement.date, measurement.prcp).filter(measurement.date >= '2016-08-23').all()\n",
+    "#precipitation_query = []\n",
+    "#precipitation_query = session.query(measurement.date, measurement.prcp).filter(measurement.date >= '2016-08-23').all()\n",
     "#print(precipitation_query)\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
@@ -226,16 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x28285445b20>"
+       "<matplotlib.legend.Legend at 0x283051d2ac0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +401,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +456,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +479,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +521,7 @@
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
     "temperature_results = session.query(measurement.tobs).\\\n",
     "filter(measurement.station == 'USC00519281').\\\n",
-    "filter(measurement.date.between('2016-08-23', '2017-0823')).all()\n",
+    "filter(measurement.date >= query_date).all()\n",
     "#Save results to a dataframe that will be used to make the histogram\n",
     "temperature_df = pd.DataFrame(temperature_results, columns=['tobs'])\n",
     "print(temperature_df)"
@@ -472,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +538,7 @@
        "Text(0.5, 0, 'Temperature')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -511,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
